<resources>
    <string name="app_name">StayHealthy</string>

    <string name="title_activity_home">Meal plan</string>
    <string name="title_activity_parameter">Edit parameters</string>
    <string name="title_activity_profile">User profile</string>
    <string name="title_activity_food_menu">Food Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_food_planner">Food planner</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_knowledge_base">Knowledge base</string>
    <string name="menu_log_out">Log out</string>

    <string name="hi_user"> Hi %s</string>

    <!-- radio buttons gender -->
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="rb_sex_male">M</string>
    <string name="rb_sex_female">F</string>


    <!-- user parameters -->
    <string name="activity_level_prompt">Choose an activity level</string>
    <string-array name="activity_level_arrays">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very active</item>
        <item>Extra active</item>
    </string-array>

    <string name="parameter_sex">Sex</string>
    <string name="parameter_age">Age</string>
    <string name="parameter_weight">Weight</string>
    <string name="parameter_height">Height</string>
    <string name="parameter_activity_level">Activity level</string>
    <string name="confirm_data">Confirm data</string>

    <string name="descriptionBMI"> Underweight: &lt;18.5 \n
                                    Normal weight: 18.5–24.9 \n
                                    Overweight: 25–29.9 \n
                                    Obesity: BMI of 30 or greater</string>

    <string name="tv_profile_user_bmi">User BMI</string>
    <string name="tv_profile_bmi_categories">BMI Categories</string>
    <string name="tv_profile_calorie_needs">Calorie needs</string>

    <string name="spinner_arrow_content_description">Spinner Arrow</string>


    <string name="gram_measure_unit">g</string>
    <string name="calories_measure_unit">kcal</string>
    <string name="height_measure_unit">cm</string>
    <string name="weight_measure_unit">kg</string>
    <string name="age_measure_unit">years</string>


    <!-- knowledge base -->
    <string name="desrciptionWaterKB"> Drink water, tea or coffee (with little or no sugar). Limit your intake of milk/dairy drinks (1-2 cup/day) and juices (1 cup per day).</string>

    <string name="descriptionOilKB"> Use healthy oils (rapeseed, olive) for cooking or as a dressing. Limit the use of butter.</string>

    <string name="descriptionProteinsKB"> Choose fish, poultry, legumes and nuts. Limit your intake of red meat, cheese and avoid sausages, bacon and other processed meat.</string>

    <string name="descriptionGrainsKB">Eat various types of cereals (wholemeal bread, brown rice, etc.). Limit your intake of processed grains (e.g. white bread).</string>

    <string name="descriptionExerciseKB"> Be on the move because physical activity is important for weight control.</string>


    <!-- content descriptions -->
    <string name="image_my_plate">Latest food pyramid My Plate</string>
    <string name="image_facebook_icon"> Facebook icon </string>
    <string name="image_google_icon"> Google icon</string>
    <string name="image_lock">Lock image</string>
    <string name="iv_running_description">Running</string>
    <string name="iv_bread_description">Bread</string>
    <string name="iv_fish_description">Fish</string>
    <string name="iv_oils_description">Oil</string>
    <string name="iv_tea_description">Tea</string>

    <string name="edit_button_description">Button to edit a meal item</string>
    <string name="delete_button_description">Button to delete a meal item</string>

    <string name="button_sign_in">Log in</string>
    <string name="sing_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="or_register_with">Or register with</string>
    <string name="or_log_in_with">Or Log in  with</string>
    <string name="already_have_acccount"> Already have an account? <big><b>Login</b></big> </string>
    <string name="dont_have_an_account_yet_register_now">Dont have an account yet? <big><b>Register</b></big> </string>

    <string name="welcome_back"> Welcome back </string>
    <string name="forgot_password">Forgot your password?</string>


    <string name="send">Send</string>
    <string name="request_canceled">Request canceled</string>

    <string name="login_successful">Login Successful!</string>
    <string name="registration_successful">Registration successful!</string>

    <string name="user_update_successful">User update successful!</string>
    <string name="user_creation_successful">User creation successful!</string>

    <string name="food_item">Food item</string>
    <string name="query_hint_search">Search</string>

    <!-- id -->
    <string name="facebook_app_id">731575230807230</string>
    <string name="fb_login_protocol_scheme">fb731575230807230</string>


    <!-- food menu -->
    <string name="home_title_filter_date">Set meal plan date</string>
    <string name="food_calorie_value">%s kcal</string>
    <string name="calorie_needs"> %s kcal</string>
    <string name="food_quantity_value">%s g</string>


    <!-- dialog -->
    <string name="cancelProfileDiag_message">You have unsaved changes.  Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelProfileDiag_positive_caption">Abandon changes</string>
    <string name="cancelProfileDiag_negative_caption">Continue editing</string>

    <string name="savingProfileDiag_message">Saving...</string>
    <string name="loading_progress_message">Loading...</string>

    <string name="search_food_hint">Search %s</string>

    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="action_change_food_quantity">Change food quantity</string>

    <string name="action_edit_meal_item">Edit meal item</string>


    <string name="foodplanner_instructions_heading">Instructions</string>
    <string name="foodplanner_instructions_description">\nSwipe left to edit or delete meal plan item.\n\nUse the calendar button in the toolbar to pick date for meal planning.</string>


    <string name="hint_food_quantity">Quantity</string>
    <string name="error_valid_quantity">Enter valid quantity</string>


    <!-- food categories -->
    <string name="Grainspasta">
        Grains \u0026 \n
        Pasta
    </string>
    <string name="category_fruits">Fruits</string>
    <string name="category_vegetables">Vegetables</string>
    <string name="category_grains">Grains</string>
    <string name="category_proteins">Proteins</string>
    <string name="calories">Calories</string>

    //Inputs
    <string-array name="food_categories">
        <item>Grains\u0026Pasta</item>
        <item>@string/category_vegetables</item>
        <item>@string/category_proteins</item>
        <item>@string/category_fruits</item>
    </string-array>


    <string name="enter_valid_email">Enter a valid email</string>
    <string name="use_at_least_6_characters">Use at least 6 characters</string>
    <string name="enter_valid_password">Enter a valid email</string>
    <string name="fill_all_parameters">Fill all parameters!</string>
    <string name="check_email_to_reset_pass">Check email to reset your password!</string>

    <string name="got_it">GOT IT</string>

    <string name="menu_add_food">Add food</string>
    <string name="menu_app_food">App food</string>
    <string name="menu_my_food">My food</string>

    <string name="accept_permissions">Accept permissions to enable this feature</string>

    <string name="enter_food_name">Food name</string>
    <string name="enter_food_calories">Food calories (kcal)</string>
    <string name="enter_food_quantity">Food quantity (g) </string>

    //Validation
    <string name="validation_error_required">Input required</string>
    <string name="invalid_pattern">Invalid pattern</string>
    <string name="too_short">Too short</string>


    <string name="check_your_connection">Check your connection and try again</string>

    <string name="app_food">App food</string>
    <string name="my_food">My food</string>

    <string name="time_to_eat">Time to eat</string>
    <string name="it_is_lunch_time">It is lunch time!</string>
    <string name="it_is_dinner_time">It is dinner time!</string>
    <string name="it_is_breakfast_time">It is breakfast time!</string>

    <string name="you_exceed_required_calories">You exceed required calories for %1s kcal? Do you really want to continue with adding meal item?</string>


</resources>
