<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="5"
        android:title="@string/app_name"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_food"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/menu_add_food"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_my_food"
        android:orderInCategory="20"
        android:title="@string/menu_my_food"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_app_food"
        android:orderInCategory="30"
        android:title="@string/menu_app_food"
        app:showAsAction="never" />


</menu>
